Exception Handler 처리 프로세스, 예외 열거형 구조 수정